--- a/scroll/scroll.css
+++ b/scroll/scroll.css
@@ -54,10 +54,19 @@ main{display: flex;justify-content: center;}
   50% {bottom: -15px;}
 }
 
-.show{
+#phones > div.show{
   opacity: 1 !important;
   transition: all 1s ease-in 0s;
 }
+
+#tamanho > div.show{
+  opacity: 1 !important;
+  transition: all 2s ease-in 2s;
+  height: 100vh !important;}
+
+#tamanho > div.show > div{
+  transition: all 2s ease-in 4s;
+  color: white;}
 
 #phones{
   width: 100vmin;
@@ -68,11 +77,15 @@ main{display: flex;justify-content: center;}
   background-image: url(images/regua.png);
   background-repeat: no-repeat;
   background-position: right 0 bottom;
-  animation: regua 3s ease-in-out 0s 1;background-blend-mode: multiply;background-color: #ffeb3b;}
+  animation: regua 3s ease-in-out 0s 1;background-blend-mode: multiply;z-index: 1;}
 
 @keyframes regua{
-  from  {background-position: right -63px bottom;}
+  from {background-position: right -63px bottom;}
   to {background-position: right 0 bottom;}
+}
+
+#tamanho > div{
+  opacity: 0;
 }
 
 #phones > div{
@@ -81,7 +94,7 @@ main{display: flex;justify-content: center;}
   height: 100vh;
   position: absolute;
   align-items: end;
-  z-index: 3;}
+  z-index: 2;}
 
 #phones > div > *{
   display: block;
@@ -95,9 +108,9 @@ main{display: flex;justify-content: center;}
   border-radius: 15px;
   height: 75vh;
   width: 320px;
-  border: solid 3px black;
+  border: solid 4px #00000011;
   bottom: 10px;
-  right: 15vw;}
+  right: 15vw;box-shadow: 1px 1px 5px 1px #00000055;}
 
 
 #phones > div > img{ 
@@ -105,9 +118,13 @@ main{display: flex;justify-content: center;}
 }
 
 #slides{position: absolute;display: flex;flex-direction: column;justify-content: center;}
-#slides > div{height: 100vh;width: 100vmin;border-top: red solid 3px;z-index: 2;}
+#slides > div{height: 100vh;width: 100vmin;border-top: red solid 3px;z-index: 1;}
 #slides > div:first-of-type{border: 0;}
 #slides > div:last-of-type{padding-top: 10px;}
+
+#tamanho{position: absolute;display: flex;flex-direction: column;justify-content: center;}
+#tamanho > div{text-align: center;display: grid;opacity: 0;height: 100vh;align-items: end;}
+#tamanho > div > div{background-color: red;padding: 5px;width: max-content;font-size: 0.75rem;color: #ffeb3b;font-weight: bold;}
 
 h1{
   font-weight: normal;
@@ -137,10 +154,10 @@ h4{text-align: center;
   text-decoration: none;
   color: #00a6ed;
   background-color: white;
-  padding: 10px 5px 0;
+  padding: 10px 10px 0px;
   border-radius: 10px;
   border: solid 3px;
-  box-shadow: 0px 1px 3px 0px #00000055;}
+  box-shadow: 0px 1px 2px 1px #00000022;}
 
 .specs {
   position: relative;
@@ -150,7 +167,7 @@ h4{text-align: center;
   opacity: 0.7;
   top: 100vh;
   display: flex;
-  flex-direction: column;z-index: 1;}
+  flex-direction: column;}
 
 .specs > p:nth-child(3)::before{display: inline-block;
     width: 20px;
