--- a/calc/app.css
+++ b/calc/app.css
@@ -14,11 +14,11 @@ body {
 h1 {
   font-size: 16px;
   text-transform: uppercase;
-  letter-spacing: 2px;
+  letter-spacing: 3px;
 }
 
 p {
-  margin: 48px 0;
+  margin: 20px 0;
   font-size: 22px;
 }
 
@@ -64,7 +64,7 @@ a:hover {
 .baldes {
   display: flex;
   width: 100%;
-  height: 30px;
+  height: 20px;
 }
 
 .baldes > div {
@@ -72,7 +72,8 @@ a:hover {
 }
 
 .baldes > div.voce {
-  background: #ff5722;
+  background: #3f51b5;
+  color:#3f51b5;
 }
 
 .baldes > div {
@@ -80,20 +81,24 @@ a:hover {
   margin: 0 2px;
 }
 
+.voce::before {
+  content: attr(data-before) !important;
+  position: absolute;
+  top: -20px;
+  font-weight: bold;
+  color: #3f51b5;
+  font-size: 12px;}
+
+.baldes > div::after {
+  content: attr(data-ate);
+  bottom: -20px;
+  font-size: 0.5rem;
+  position: relative;}
+
 .voce {
   position: relative;
-  display: flex;
-  justify-content: center;
+  justify-content: left;
   width: 0%;
   height: 100%;
-  background: #ff5722;
-}
-
-.voce::before {
-  content: 'Você';
-  position: absolute;
-  top: -32px;
-  text-align: center;
-  font-weight: bold;
-  color: #ff5722;
+  background: #3f51b5;
 }
