--- a/calc/app.css
+++ b/calc/app.css
@@ -1,37 +1,44 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;700&display=swap');
 
 body{
-  margin: 0;background: #fefefe;
-}
+  margin: 0px;background: #fefefe;
+display: flex;height: 100vh;justify-content: center;align-items: center;}
 
 main {
   font-family: 'Poppins', sans-serif;
   line-height: 1.5;
   color: #ff5722;
-  margin: auto;
+  
   font-size: 1rem;
-  min-width: 320px;
-  max-width: 360px;
-  height: 90vh;
+  
+  
+  
   display: grid;
-  align-content: center;
+  
   grid-template-areas:
     "tit gra"
     "card gra";
-  grid-template-columns: 250px 1fr; 
-  grid-template-rows: 250px 1fr;
-}
+  grid-template-columns: 225px 1fr; 
+  grid-template-rows: 300px 1fr;
+min-width: 320px;max-width: 360px;width: 100%;}
 
 #titulo { grid-area: tit; padding: 1rem;}
-#grafico { grid-area: gra; margin: auto;}
+#grafico { grid-area: gra; place-self: center;}
 #card { grid-area: card; }
 
-h1 {
-  font-size: 1.3rem;
+h1,h2 {
   text-transform: uppercase;
   letter-spacing: 3px;
   color: #3f51b5;
-  text-decoration: underline dotted;}
+  margin: 0;
+}
+
+h1{
+  text-decoration: underline dotted;
+font-size: 1.2rem;}
+
+h2 {
+  font-size: 0.6rem !important;font-weight: 500;}
 
 p {
   margin: 1.5rem 0;
@@ -43,14 +50,14 @@ p {
 
 input {
   all: unset;
-  width: 150px;
+  width: 125px;
   padding: 0 8px;
   border-radius: 8px;
   border: 2px solid #ffc2af;
   color: #3f51b5;
   background: White;
   text-align: center;
-  font-size: 3rem;}
+  font-size: 2.5rem;}
 
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
