--- a/calc/app.css
+++ b/calc/app.css
@@ -2,29 +2,26 @@
 
 body{
   margin: 0px;background: #fefefe;
-display: flex;height: 100vh;justify-content: center;align-items: center;}
+display: flex;height: 90vh;justify-content: center;align-items: flex-end;}
 
 main {
   font-family: 'Poppins', sans-serif;
   line-height: 1.5;
   color: #ff5722;
-  
   font-size: 1rem;
-  
-  
-  
   display: grid;
-  
-  grid-template-areas:
-    "tit gra"
-    "card gra";
+  grid-template-areas: "tit gra"
+"card gra"
+". gra";
   grid-template-columns: 225px 1fr; 
-  grid-template-rows: 300px 1fr;
-min-width: 320px;max-width: 360px;width: 100%;}
+  grid-template-rows: 300px 225px 1fr;
+  min-width: 320px;
+  max-width: 360px;
+  width: 100%;}
 
 #titulo { grid-area: tit; padding: 1rem;}
 #grafico { grid-area: gra; place-self: center;}
-#card { grid-area: card; }
+#card { grid-area: card; height: 100%; width: 100%; perspective: 1000px; }
 
 h1,h2 {
   text-transform: uppercase;
@@ -35,7 +32,7 @@ h1,h2 {
 
 h1{
   text-decoration: underline dotted;
-font-size: 1.2rem;}
+  font-size: 1.2rem;}
 
 h2 {
   font-size: 0.6rem !important;font-weight: 500;}
@@ -43,7 +40,6 @@ h2 {
 p {
   margin: 1.5rem 0;
   font-size: 1.5rem;
-  
   text-transform: uppercase;
   letter-spacing: 0.2rem;
   font-weight: normal;}
@@ -70,10 +66,6 @@ input[type=number] {
   -moz-appearance: textfield;
 }
 
-footer {
-  margin-top: 48px;
-}
-
 a {
   color: inherit;
 }
@@ -92,42 +84,74 @@ a:hover {
   background: #ff9777;
 }
 
-.blocos > div.selecionada {
+.blocos > div.mostrar {
   background: #3f51b5;
   color:#3f51b5;
   width: 100%;
   transition: all 1s ease-in-out 0s;}
 
 .blocos > div {
-  height: 100%;
   margin: 2px;
   width: 100%;
   position: relative;
   display: flex;
   justify-content: end;}
 
-.selecionada::before {
+.mostrar::before {
   content: attr(data-before) !important;
   font-weight: bold;
   color: #3f51b5;
-  font-size: 0.75rem;transform: rotate(-90deg);
+  font-size: 0.8rem;transform: rotate(-90deg);
   line-height: 1;
-  align-self: center;
-  position: relative;
-  right: -0.5rem;
-  transition: all 1s ease-in-out 0s;}
+  align-self: flex-end;
+  transition: all 1s ease-in-out 0s;
+  width: 100%;}
 
 .blocos > div::after {
   content: attr(data-de);
-  font-size: 0.75rem;
   position: relative;
   right: -2.5rem;
   letter-spacing: 0.15rem;
   width: 100%;
-  transition: all 1s ease-in-out 5s;}
+  transition: all 1s ease-in-out 0s;}
 
-.selecionada {
-  position: relative;
-  justify-content: left;
-  width: 3vmax;
+#card-i{
+  width: 100%;
+  height: 100%;
+  transition: transform 1s;
+  transform-style: preserve-3d;
 }
+
+#card-i.virar, .card-i {
+  transform: rotateY(-180deg);
+}
+
+#card-f,#card-v{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+#card-f{
+  
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  font-size: 5rem;
+  display: grid;
+  border: solid;
+  border-radius: 15px;background-color: #ff5722;border: solid #00000011;}
+
+#card-f > div{
+  align-self: center;
+  color: white;}
+
+#card-v{
+  background-color: #3f51b5;
+  width: 100%;
+  height: 100%;
+  transform: rotateY(-180deg);
+  border-radius: 15px;
+  border: solid #00000022;}
