--- a/calc/app2.css
+++ b/calc/app2.css
@@ -1,39 +1,24 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;700&display=swap');
 
-body{margin: 0px;background: #fefefe;display: flex;height: 90vh;justify-content: center;align-items: flex-end;}
+body{
+    margin: auto;
+    background: #fefefe;
+    font-family: 'Poppins', sans-serif;
+    color: #ff5722;
+    width: 360px;   
+    }
 
 main {
-  font-family: 'Poppins', sans-serif;
-  line-height: 1.5;
-  color: #ff5722;
-  
-  display: grid;
-  grid-template-areas:
-    "tit gra"
-    "card gra";
-  grid-template-columns: 215px 90px; 
-  grid-template-rows: 250px 1fr;
-  min-width: 320px;
-  max-width: 350px;
-  width: 100%;}
+  scroll-snap-type: y mandatory;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  height: 100vh;
+}
 
-  @media (min-aspect-ratio: 1 / 1) {
-    main {
-      grid-template-areas: "tit card gra";
-      grid-template-columns: 220px 250px 1fr; 
-      grid-template-rows: 1fr;
-      width: 600px;
-      max-width: 100vw;
-    }
-    #card-i{
-      align-items: center;
-    }
-  }
-
-#titulo { grid-area: tit; padding: 0.8rem;align-self: center;text-align: center;}
-#grafico { grid-area: gra; place-self: center;}
-#card { grid-area: card; height: 100%; width: 100%; perspective: 1000px; padding: 0px;text-align: center;font-size: 0.75rem;}
+#titulo {  padding: 3rem;text-align: center;justify-content: center;align-items: center;display: flex;flex-direction: column;height: 100vh;scroll-snap-align: center;}
+#grafico {  height: 100vh;display: flex;justify-content: center;align-items: center;scroll-snap-align: center;}
+#card {  height: 100vh;  perspective: 1000px; padding: 0px;text-align: center;font-size: 0.75rem;justify-content: center;align-items: center;display: flex;scroll-snap-align: center;}
 
 h1,h2 {
   text-transform: uppercase;
@@ -44,10 +29,10 @@ h1,h2 {
 
 h1{
   text-decoration: underline dotted;
-  font-size: 1.2rem;}
+  }
 
 h2 {
-  font-size: 0.6rem !important;font-weight: 500;}
+  font-size: 0.7rem !important;font-weight: 500;line-height: 1;margin-top: 20px;}
 
 p {
   margin: 1rem 0;
@@ -142,7 +127,7 @@ a:hover {
   transform-style: preserve-3d;
   display: flex;
   justify-content: center;
-  }
+  align-items: center;}
 
 #card-i.virar, .card-i {
   transform: rotateY(-180deg);
