--- a/calc/app.css
+++ b/calc/app.css
@@ -1,60 +1,74 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;700&display=swap');
 
-body{margin: 0px;background: #fefefe;display: flex;height: 90vh;justify-content: center;align-items: flex-end;}
+*{
+  box-sizing: border-box;
+}
 
-main {
+/* html{
+  overflow-y: scroll;
+  overflow-x: hidden;
+  height: 100%;} */
+
+main{
+  scroll-snap-type: x mandatory;
+  overflow-x: auto;
+  overflow-y: hidden;
+  display: flex;
+  height: 100%;
+  width: 100vw;
+}
+
+main > * {
+  scroll-snap-align: center;
+  height: 100%;
+  min-width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+body {
+  background: #fefefe;
   font-family: 'Poppins', sans-serif;
-  line-height: 1.5;
   color: #ff5722;
-  
   display: grid;
-  grid-template-areas:
-    "tit gra"
-    "card gra";
-  grid-template-columns: 215px 90px; 
-  grid-template-rows: 250px 1fr;
-  min-width: 320px;
-  max-width: 350px;
-  width: 100%;}
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  overflow-y: hidden;
+  margin: 0;
+  padding: 0;
+}
 
-  @media (min-aspect-ratio: 1 / 1) {
-    main {
-      grid-template-areas: "tit card gra";
-      grid-template-columns: 220px 250px 1fr; 
-      grid-template-rows: 1fr;
-      width: 600px;
-      max-width: 100vw;
-    }
-    #card-i{
-      align-items: center;
-    }
-  }
+@media (min-aspect-ratio: 1 / 1) {
+  .blocos{transform: rotate(-90deg);height: 90vw !important;}
+}
 
-#titulo { grid-area: tit; padding: 0.8rem;align-self: center;text-align: center;}
-#grafico { grid-area: gra; place-self: center;}
-#card { grid-area: card; height: 100%; width: 100%; perspective: 1000px; padding: 0px;text-align: center;font-size: 0.75rem;}
+#titulo {text-align: center;justify-content: center;align-items: center;display: flex;flex-direction: column;}
+#grafico {display: flex;justify-content: center;align-items: center;}
+#card {perspective: 1000px; text-align: center;font-size: 0.75rem;/* justify-content: center; *//* align-items: center; *//* display: flex; */}
 
 h1,h2 {
   text-transform: uppercase;
   letter-spacing: 3px;
   color: #3f51b5;
   margin: 0;
-}
+  width: 70vw;}
 
 h1{
   text-decoration: underline dotted;
-  font-size: 1.2rem;}
+  font-size: 2rem;}
 
 h2 {
-  font-size: 0.6rem !important;font-weight: 500;}
+  font-size: 0.7rem !important;font-weight: 500;line-height: 1;margin-top: 20px;}
 
 p {
-  margin: 1rem 0;
+  
   font-size: 1.2rem;
   text-transform: uppercase;
   letter-spacing: 0.2rem;
-  font-weight: normal;}
+  font-weight: normal;width: 50vw;}
 
 input {
   all: unset;
@@ -89,8 +103,9 @@ a:hover {
 .blocos {
   display: flex;
   width: 2rem;
-  height: 85vh;
-  flex-direction: column;}
+  height: 80vh;
+  flex-direction: column;
+  justify-content: center;}
 
 .blocos > div {
   background: #ff9777;
@@ -142,16 +157,16 @@ a:hover {
   transform-style: preserve-3d;
   display: flex;
   justify-content: center;
-  }
+  align-items: center;}
 
-#card-i.virar, .card-i {
+#card-i.virar {
   transform: rotateY(-180deg);
 }
 
 #card-f,#card-v{
   position: absolute;
-  width: 180px;
-  height: 180px;
+  width: 300px;
+  height: 300px;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
